# Craftus-Next

./: .gitignore  .gitmodules  CMakeLists.txt  Craftus-Next.elf  Craftus-Next.lst  Craftus-Next.rsf  Craftus-Next.smdh  Debug.bat  Makefile  README.md  TODO  cformat.sh  dec.txt  makebanner  makesmdh
.github/workflows/: 3ds.yml  PC.yml  main.yml  switch.yml
3ds/: Craftus-Next.cia  Craftus-Next.smdh  Makefile  TODO  makesmdh  speicherformat.md  upload
3ds/dependencies/ini/: ini.c  ini.h
3ds/dependencies/lodepng/: lodepng.c  lodepng.h
3ds/dependencies/miniz/: miniz.c  miniz.h
3ds/dependencies/mpack/: mpack-config.h  mpack.c  mpack.h
3ds/dependencies/playback/: all.h  error.c  error.h  file.c  file.h  flac.c  flac.h  mp3.c  mp3.h  opus.c  opus.h  playback.c  playback.h  types.h  vorbis.c  vorbis.h  wav.c  wav.h
3ds/dependencies/sino/: sino.h
3ds/dependencies/vec/: vec.c  vec.h
3ds/icon/: Craftus-Next.mtl  iconmodel.cgfx  iconmodel.mtl
3ds/include/: GameStates.h
3ds/include/blocks/: Block.h  BlockEvents.h  Item.h
3ds/include/entity/: Damage.h  Player.h  PlayerController.h
3ds/include/gui/: CrashMenu.h  DeathMenu.h  DebugUI.h  FontLoader.h  Gui.h  Inventory.h  OptionsMenu.h  PauseMenu.h  SpriteBatch.h  TitleMenu.h  WorldSelect.h
3ds/include/inventory/: ItemStack.h
3ds/include/misc/: Collision.h  CommandLine.h  Crash.h  InputData.h  NumberUtils.h  Raycast.h  Sound.h  VecMath.h  Xorshift.h  noise.h
3ds/include/rendering/: Camera.h  Clouds.h  Cursor.h  Hand.h  PolyGen.h  Renderer.h  TextureMap.h  VBOCache.h  VertexFmt.h  WorldRenderer.h
3ds/include/world/: Chunk.h  ChunkWorker.h  Direction.h  WorkQueue.h  World.h
3ds/romfs/: licenses.txt
3ds/source/: main.c  workspace.code-workspace
3ds/source/blocks/: Block.c  BlockEvent.c  Item.c  Liquids.c
3ds/source/entity/: Damage.c  Player.c  PlayerController.c
3ds/source/gui/: CrashMenu.c  DeathMenu.c  DebugUI.c  FontLoader.c  Gui.c  Inventory.c  OptionsMenu.c  PauseMenu.c  SpriteBatch.c  TitleMenu.c  WorldSelect.c
3ds/source/misc/: Collision.c  CommandLine.c  Crash.c  Raycast.c  Sound.c  noise.c
3ds/source/rendering/: Camera.c  Clouds.c  Cursor.c  Hand.c  PolyGen.c  Renderer.c  TextureMap.c  VBOCache.c  VertexFmt.c  WorldRenderer.c  gui.v.pica  world.v.pica
3ds/source/world/: Chunk.c  ChunkWorker.c  Direction.c  WorkQueue.c  World.c
CNE/: cne.hpp  headers.hpp  parameter.hpp
CNE/Graphics/: Color.cpp  Color.hpp  SpriteBatch.hpp
CNE/Graphics/API/: API.cpp  API.hpp  NRenderer.hpp
CNE/driver/def/: 2DBatch.hpp  Camera.hpp  NRenderer.hpp  NWindow.hpp  RenderContext.hpp  RenderObject.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
CNE/driver/ogl/: Camera.cpp  Camera.hpp  GL_Camera.hpp  OpenGL_2DBatch.cpp  Shaders.hpp  (+11 more)
Old-Craftus/source/: main.c
app/: Craftus-Next.cgfx  Craftus-Next.mtl  Craftus-Next.rsf  build-cia.rsf
base/: Base.cpp  Base.hpp  CMakeLists.txt  Error.hpp  StealConsole.cpp  StealConsole.hpp
base/basegame/: TextureMapper.hpp
base/basegame/bitmapengine/: BitmapEngine.cpp  BitmapEngine.hpp  bmp.hpp  bmpconverter.cpp  bmpconverter.hpp
base/include/: ShaderTable.hpp  StealConsole.hpp  json.hpp
base/include/basegame/: TextureMapper.hpp
base/include/basegame/bitmapengine/: bmpconverter.hpp
base/include/misc/: ini.hpp  stringcheats.hpp
base/include/objects/: Object.hpp  Sprite.hpp  Text.hpp
base/include/rendering/: Base_Ren_Reg.hpp  Renderer_Def.hpp  Shader.hpp  Texture.hpp
base/include/rendering/c3d/: C3D_Renderer.hpp  C3D_VertexArray.hpp
base/include/rendering/gl/: gl.h
base/misc/: Color.cpp  Color.hpp  Timer.hpp  Xorshift.hpp  bvec.hpp  color_t.h  ini.hpp  memory.cpp  memory.hpp  stringcheats.hpp
base/objects/: Object.hpp  Sprite.hpp  Text.cpp  Text.hpp
base/rendering/: BaseRender.hpp  BaseShaders.hpp  Base_Ren_Reg.cpp  Base_Ren_Reg.hpp  Renderer.cpp  Renderer.hpp  Renderer_Def.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VArray.cpp  VArray.hpp  Vertex.hpp  VertexArray.hpp
base/rendering/c3d/: C3D_Renderer.cpp  C3D_Renderer.hpp  C3D_Shader.cpp  C3D_Shader.hpp  C3D_Texture.cpp  C3D_Texture.hpp  C3D_VArray.hpp  C3D_Varray.cpp  C3D_VertexArray.cpp  C3D_VertexArray.hpp
base/rendering/gl/: GL_Renderer.cpp  GL_Renderer.hpp  GL_Shader.cpp  GL_Shader.hpp  GL_Texture.cpp  GL_Texture.hpp  GL_VArray.cpp  GL_Varray.hpp  GL_VertexArray.cpp  GL_VertexArray.hpp  PolyGen.cpp  PolyGen.hpp  gl.h
base/source/: Base_Ren_Reg.cpp  C3D_Shader.cpp  C3D_Texture.cpp  GL_Shader.cpp  GL_Texture.cpp  GL_VertexArray.cpp  ShaderTable.cpp  StealConsole.cpp  memory.cpp
base/ui/: Gui.cpp  Gui.hpp
base/world/: World.hpp
dependencies/ini/: CMakeLists.txt  ini.c  ini.h
dependencies/lodepng/: CMakeLists.txt  lodepng.c  lodepng.h
dependencies/miniz/: CMakeLists.txt  miniz.c  miniz.h
dependencies/mpack/: CMakeLists.txt  mpack-config.h  mpack.c  mpack.h
dependencies/playback/: CMakeLists.txt  error.c  file.c  flac.h  mp3.c  mp3.h  playback.c  vorbis.c
dependencies/sino/: CMakeLists.txt
dependencies/vec/: CMakeLists.txt
icon/: banner.bnr
include/: GameStates.h  gui_shbin.h  world_shbin.h
include/blocks/: Block.h
include/entity/: Player.h  PlayerController.h
include/gui/: CrashMenu.h  DeathMenu.h  Gui.h  OptionsMenu.h  PauseMenu.h  SpriteBatch.h  TitleMenu.h  WorldSelect.h
include/inventory/: ItemStack.h
include/misc/: Crash.h  NumberUtils.h  mem.h  noise.h
include/rendering/: Renderer.h  VertexFmt.h
include/world/: Chunk.h  World.h
source/: NextGenSystems.cpp  NextGenSystems.hpp  global.hpp  main.c  main.cpp
source/block/: Block.hpp
source/blocks/: Block.c  Item.c  Liquids.c
source/entity/: Player.c  PlayerController.c
source/gui/: CrashMenu.c  DeathMenu.c  Inventory.c  PauseMenu.c  TitleMenu.c  WorldSelect.c
source/misc/: Crash.c  Raycast.c  Sound.c  noise.c
source/renderer/: VBOCache.hpp
source/rendering/: Clouds.c  PolyGen.c  Renderer.c  TextureMap.c  VBOCache.c  WorldRenderer.c
source/world/: Chunk.hpp  Cluster.hpp  World.c
switch/: Makefile
switch/source/: main.cpp  main.cpp.useless
tools/UV-Tool/: CMakeLists.txt  icon.rc
(+117 files in other folders)
